# 
# For further information see MDM community web site 
# 
# https://www.mdm-community.org 
# 
# Stop MDM community Header =======================================


0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.6.7 (Christian Rechner)
	
		- Added test cases for reading official ASAM 6.0 example files


	0.6.6 (Masayoshi Kuroda)
	
		- Added support for new ASAM ODS 6.0 'DT_BYTESTR'

	0.6.5 (Gigatronik Ingolstadt GmbH)
	
		- Escape '+' in patterns
		- Change messages in bin-file-related errors
		- Support LocalColumn-inline-flags

	0.6.4 (Christian Rechner)
	
		- Added implicit creation of 'AoExternalComponent->ordinal_number' if not existing in
		  application model

	0.6.3 (Christian Rechner, Markus Renner)
	
		- Improved method 'ApplElemAccess->insertInstances()':
		  Support for 1:n relations and instance attributes.
		- Added base model 'asam32'
		- Now supports DS_BYTESTR datatype for external component file writing
		- Bytestreams are split when EXT_COMP_SEGSIZE is reached

	0.6.2 (Christian Rechner)
	
		- Added ability to start as CORBA server from command line.

	0.6.1 (Christian Rechner)
	
		- Call garbage collector on session close
		- Improved method 'AppElemAccess->getInstances()'
		- Added support for sequence_representation=implicit_linear of type DT_STRING
		- Added license file for Apache2 license

	0.6.0 (Christian Rechner)
	
		- Added interface for file system abstraction layer
		- Fixed reading flags from either inline XML or component file
		- Added support for value types:
		  * dt_short_beo
		  * dt_long_beo
		  * dt_longlong_beo
		  * ieeefloat4_beo
		  * ieeefloat8_beo
		  * dt_ushort_beo
		  * dt_ulong_beo
		  * dt_bit_uint
		  * dt_bit_uint_beo


	0.5.6 (Christian Rechner)

	    - Added buffer when reading external component files to increase performance
	    - Implemented reading flags from external component file
	    - Implemented handling flags in component file